--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
+    "ioredis": "^5.7.0",
     "pg": "^8.13.1",
     "telegraf": "^4.16.3",
     "typescript": "^5.7.3"
