--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.26",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --config jest.unit.config.js",
+    "test:integration": "jest --config jest.integration.config.js",
     "dr:gen": "npx drizzle-kit generate",
     "dr:mig": "npx drizzle-kit migrate",
     "dev": "ts-node-dev --respawn --rs --transpile-only src/server.ts",
@@ -25,17 +29,23 @@
     "body-parser": "^1.20.3",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.7.0",
     "pg": "^8.13.1",
+    "playwright": "^1.55.0",
     "telegraf": "^4.16.3",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
     "@types/express": "^5.0.0",
+    "@types/jest": "^30.0.0",
     "@types/pg": "^8.11.10",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.1",
     "ts-node-dev": "^2.0.0"
   }
 }
