--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,17 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "lib": ["es2016", "es2017", "es2018", "es2019", "es2020"],
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "temp", "dist"],
+  "exclude": [
+    "node_modules",
+    "temp",
+    "dist",
+    "src/**/__tests__/**",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts"
+  ],
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
